--- a/services/auth-service/.env
+++ b/services/auth-service/.env
@@ -1,1 +1,3 @@
 PORT = 3001
+MONGO_URI = mongodb+srv://microservice:123micro123@ltscluster.gs3nb.mongodb.net/?appName=ltsCluster
+SECRET_KEY = 'dbskfjdsnlfn'
